--- a/views/bioTimesheet/index.hbs
+++ b/views/bioTimesheet/index.hbs
@@ -11,6 +11,12 @@
     </div>
 </div>
 
+<div id="loading-indicator">
+  <div class="spinner-border text-primary" role="status">
+    <span class="sr-only"></span>
+  </div>
+</div>
+
 <div class="mt-2" id="bioTimesheetTable"></div>
 <div class="mt-2" id="tempbioTimesheetTable" hidden></div>
 
@@ -216,7 +222,7 @@
                 url: '/api/bio-timesheet/update-timesheet',
             }).done(function (data) {
                  hideLoadingIndicator();
-                if(data.status =="ok"){
+                if(data.status =="OK"){
                    location.reload();
                 }else{
                     alert("Failed to download")
