Added MaxWorkHoursPerDay fror employees

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -73,7 +73,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Employees</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/employees/hour-deduction">Employee Work Hour Deduction Page</a></li>
+              <li><a class="dropdown-item" href="/employees/hour-deduction">Employee Work Hour Deduction Settings</a></li>
+              <li><a class="dropdown-item" href="/employees/max-workhour-settings">Employee Max Work Hour Settings</a></li>
             </ul>
           </li>
         <li class="nav-item">
