--- a/views/jobs/jobAssignmentPage.hbs
+++ b/views/jobs/jobAssignmentPage.hbs
@@ -22,6 +22,8 @@
 
 <script>
     $(document).ready(()=>{
+        alert("Page under maintenance!!!");
+        location.replace("/");
         const CreatedBy = $('#employeeId').val()
         const DepartmentId = $('#department').val()
         const fileInput = document.getElementById('file')
