Modified Utility.JS to handle ClearERPdata button style

--- a/views/erpTransaction/selection_page.hbs
+++ b/views/erpTransaction/selection_page.hbs
@@ -59,7 +59,7 @@
                         }
                     }
                 },},
-                 {title:"Clear Data",formatter:sendIcon, hozAlign:"center", cellClick:async function(e, cell){
+                 {title:"Clear Data",formatter:clearIcon, hozAlign:"center", cellClick:async function(e, cell){
                     let {DepartmentId, UserCategoryId, FromDate, ToDate, Status} = cell.getData();
                     if(!Status){
                         return
