--- a/views/erpTransaction/selection_page.hbs
+++ b/views/erpTransaction/selection_page.hbs
@@ -108,7 +108,7 @@
         flatpickr("#to_date", {dateFormat: "Y-m-d"});
 
 
-         $('input[name="serverSelection"]').on('change', function() {
+         $('input[name="serverSelection"]').on('change', async function() {
             const selectedServer = $(this).val();
             showLoadingIndicator();
             let response = await fetchHandler(`/api/erp-transaction/server-selected`,selectedServer,"POST")
