--- a/views/erpTransaction/selection_page.hbs
+++ b/views/erpTransaction/selection_page.hbs
@@ -2,15 +2,15 @@
 <div class="row justify-content-start">
     <div class="col-md-6 ml-auto">
        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio1" value="dev" {{#eq selectedServer "dev"}}check{{/eq}}>
+            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio1" value="dev" {{#eq selectedServer "dev"}}checked{{/eq}}>
             <label class="form-check-label" for="inlineRadio1">Dev Server</label>
             </div>
             <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio2" value="uat" {{#eq selectedServer "uat"}}check{{/eq}}>
+            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio2" value="uat" {{#eq selectedServer "uat"}}checked{{/eq}}>
             <label class="form-check-label" for="inlineRadio2">UAT Server</label>
             </div>
             <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio3" value="prod" {{#eq selectedServer "prod"}}check{{/eq}} >
+            <input class="form-check-input" type="radio" name="serverSelection" id="inlineRadio3" value="prod" {{#eq selectedServer "prod"}}checked{{/eq}} >
             <label class="form-check-label" for="inlineRadio3">Production Server</label>
         </div>
     </div>
