--- a/views/bioTimesheet/biotimesheet_horizontal_report.hbs
+++ b/views/bioTimesheet/biotimesheet_horizontal_report.hbs
@@ -3,7 +3,7 @@
         <button class="btn btn-outline-success" type="button" id="update_table">Update Table</button>
     </div>
     <div class="col-2">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#filter_modal">Apply Filter</button>
+        <button type="button" class="btn btn-primary" id="show_model" data-bs-toggle="modal" data-bs-target="#filter_modal">Apply Filter</button>
     </div>
     <div class="col-2">
         <button class="btn btn-outline-success" type="button" id="download_table">Download Table</button>
@@ -106,6 +106,7 @@
 
 <script>
     $(document).ready(async function (){
+        $("#show_model").click()
          let bioTimesheetTable = new Tabulator("#bioTimesheetTable", {
             pagination:true,
             paginationMode:"remote", 
